# search-poc

./: README.md  app.py  hybrid_search.py  indexer.py  pyproject.toml
Dockerfiles/: docker-compose.yml
templates/: search_form.html  search_results.html
