[tool.poetry]
name = "hybrid-search"
version = "0.1.0"
description = "Demo of hybrid search in ElasticSearch"
authors = ["Jaime"]
readme = "README.md"
packages = [{include = "hybrid_search"}]

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^2.2.2"
elasticsearch = "^8.6.2"
flask = "^2.2.3"
flask-bootstrap = "^3.3.7.1"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
